--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </ul>
         </div>
         <div class="navbar-end">
-          <a class="btn btn-error text-white">Button</a>
+          <a class="btn btn-error text-white">Order Now</a>
         </div>
       </div>
       <div class="banner w-full">
